// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resolve-saga: eventHandler 1`] = `
Array [
  Array [
    Object {
      "sideEffects": Object {
        "executeCommand": [Function],
        "executeQuery": [Function],
        "isEnabled": true,
        "scheduleCommand": [Function],
      },
      "store": Object {
        "defineTable": [MockFunction] {
          "calls": Array [
            Array [
              "_SCHEDULER_",
              Object {
                "fields": Array [
                  "command",
                ],
                "indexes": Object {
                  "date": "number",
                  "taskId": "string",
                },
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "delete": [MockFunction] {
          "calls": Array [
            Array [
              "_SCHEDULER_",
              Object {
                "taskId": undefined,
              },
            ],
            Array [
              "_SCHEDULER_",
              Object {
                "taskId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "find": [MockFunction],
        "insert": [MockFunction] {
          "calls": Array [
            Array [
              "_SCHEDULER_",
              Object {
                "command": Object {
                  "aggregateId": "scheduledId",
                  "aggregateName": "Test",
                  "payload": "scheduledCommand",
                  "type": "scheduledCommand",
                },
                "date": 100500,
                "taskId": "guid",
              },
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
    Object {
      "aggregateId": "aggregateId",
      "aggregateVersion": 1,
      "payload": Object {
        "content": true,
      },
      "timestamp": 100,
      "type": "EVENT_TYPE",
    },
  ],
]
`;

exports[`resolve-saga: eventstoreAdapter.loadEvents 1`] = `
Array [
  Array [
    Object {
      "aggregateIds": Array [
        "guid",
      ],
      "cursor": null,
      "limit": 9007199254740991,
    },
  ],
]
`;

exports[`resolve-saga: executeCommand 1`] = `
Array [
  Array [
    Object {
      "aggregateId": "executedId",
      "aggregateName": "Test",
      "payload": "executedCommand",
      "type": "executedCommand",
    },
  ],
]
`;

exports[`resolve-saga: executeQuery 1`] = `
Array [
  Array [
    Object {
      "modelName": "modelName",
      "properties": Object {
        "RESOLVE_SIDE_EFFECTS_START_TIMESTAMP": 0,
        "test-property": "content",
      },
      "resolverArgs": Object {
        "arg": "value",
      },
      "resolverName": "resolverName",
    },
  ],
]
`;

exports[`resolve-saga: performAcknowledge 1`] = `
Array [
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": null,
        "eventSubscriber": "test-saga",
        "failedEvent": null,
        "successEvent": Object {
          "type": "Init",
        },
      },
    },
  ],
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": null,
        "eventSubscriber": "test-saga",
        "failedEvent": null,
        "successEvent": Object {
          "aggregateId": "aggregateId",
          "aggregateVersion": 1,
          "payload": Object {
            "content": true,
          },
          "timestamp": 100,
          "type": "EVENT_TYPE",
        },
      },
    },
  ],
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": null,
        "eventSubscriber": "_SCHEDULER_default-connector",
        "failedEvent": null,
        "successEvent": Object {
          "type": "Init",
        },
      },
    },
  ],
  Array [
    Object {
      "batchId": undefined,
      "result": Object {
        "error": null,
        "eventSubscriber": "_SCHEDULER_default-connector",
        "failedEvent": null,
        "successEvent": Object {
          "type": "_RESOLVE_SYS_SCHEDULED_COMMAND_FAILED_",
        },
      },
    },
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].connect 1`] = `
Array [
  Array [
    "test-saga",
  ],
  Array [
    "test-saga",
  ],
  Array [
    "_SCHEDULER_default-connector",
  ],
  Array [
    "_SCHEDULER_default-connector",
  ],
  Array [
    "test-saga",
  ],
  Array [
    "_SCHEDULER_default-connector",
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].disconnect 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "test-saga",
  ],
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "test-saga",
  ],
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "_SCHEDULER_default-connector",
  ],
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "_SCHEDULER_default-connector",
  ],
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "test-saga",
  ],
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "_SCHEDULER_default-connector",
  ],
]
`;

exports[`resolve-saga: readModelConnectors['default-connector'].drop 1`] = `
Array [
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "test-saga",
    Object {},
  ],
  Array [
    Object {
      "defineTable": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "fields": Array [
                "command",
              ],
              "indexes": Object {
                "date": "number",
                "taskId": "string",
              },
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "delete": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
          Array [
            "_SCHEDULER_",
            Object {
              "taskId": undefined,
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "find": [MockFunction],
      "insert": [MockFunction] {
        "calls": Array [
          Array [
            "_SCHEDULER_",
            Object {
              "command": Object {
                "aggregateId": "scheduledId",
                "aggregateName": "Test",
                "payload": "scheduledCommand",
                "type": "scheduledCommand",
              },
              "date": 100500,
              "taskId": "guid",
            },
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    },
    "_SCHEDULER_default-connector",
    Object {},
  ],
]
`;

exports[`resolve-saga: readModelStore.defineTable 1`] = `
Array [
  Array [
    "_SCHEDULER_",
    Object {
      "fields": Array [
        "command",
      ],
      "indexes": Object {
        "date": "number",
        "taskId": "string",
      },
    },
  ],
]
`;

exports[`resolve-saga: readModelStore.delete 1`] = `
Array [
  Array [
    "_SCHEDULER_",
    Object {
      "taskId": undefined,
    },
  ],
  Array [
    "_SCHEDULER_",
    Object {
      "taskId": undefined,
    },
  ],
]
`;

exports[`resolve-saga: readModelStore.find 1`] = `Array []`;

exports[`resolve-saga: readModelStore.insert 1`] = `
Array [
  Array [
    "_SCHEDULER_",
    Object {
      "command": Object {
        "aggregateId": "scheduledId",
        "aggregateName": "Test",
        "payload": "scheduledCommand",
        "type": "scheduledCommand",
      },
      "date": 100500,
      "taskId": "guid",
    },
  ],
]
`;

exports[`resolve-saga: scheduler.addEntries 1`] = `Array []`;

exports[`resolve-saga: scheduler.clearEntries 1`] = `Array []`;

exports[`resolve-saga: snapshotAdapter.loadSnapshot 1`] = `Array []`;

exports[`resolve-saga: snapshotAdapter.saveSnapshot 1`] = `Array []`;
